insert home front page html /scc

--- a/www/public/package.json
+++ b/www/public/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "leaffy",
+  "name": "exoscss",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {
-    "node-sass": "^4.11.0"
-  },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "node-sass --watch scss -o css"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "node-sass": "^4.11.0"
+  }
 }
