Fix front template , remove double body

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,7 @@ fabric.properties
 .idea/sonarlint
 
 # End of https://www.gitignore.io/api/phpstorm
+
+.db_data/ib_logfile0
+.db_data/ibdata1
+.db_data/ibtmp1
