update action & route for user Form

--- a/www/routes.yml
+++ b/www/routes.yml
@@ -49,6 +49,10 @@
   action: showOne
 
 #USER
+"/createUser":
+  controller: User
+  action: createUser
+
 "/addUser":
   controller: User
   action: addUser
