make user authentication & authenticateService Class

--- a/www/routes.yml
+++ b/www/routes.yml
@@ -20,6 +20,10 @@
   controller: Authentication
   action: authenticateUser
 
+"/logout":
+  controller: Authentication
+  action: userLogout
+
 #SETTINGS
 "/admin/settings":
   controller: Settings
