make dynamic front menu & add some datas(page) in DB & add strict types on all class

--- a/www/routes.yml
+++ b/www/routes.yml
@@ -64,16 +64,20 @@
 #STATIC
 "/":
   controller: Static
-  action: showHomePage
+  action: showFrontPage
 
 "/about":
   controller: Static
-  action: showAboutPage
+  action: showFrontPage
 
 "/contact":
   controller: Static
-  action: showContactPage
+  action: showFrontPage
 
 "/blog":
   controller: Static
-  action: showBlogPage
+  action: showFrontPage
+
+"/page":
+  controller: Static
+  action: showBackPage
