add mentions legal & cgu view / add return button / update CSS

--- a/www/routes.yml
+++ b/www/routes.yml
@@ -211,3 +211,11 @@
 "/validation":
   controller: Static
   action: showValidationView
+
+"/mentions-legales":
+  controller: Static
+  action: showMentionView
+
+"/cgu":
+  controller: Static
+  action: showCGUView
